@@ -16,6 +16,9 @@ Release 2.9.0 - UNRELEASED
     YARN-4906. Capture container start/finish time in container metrics.
     Contributed by Jian He.
 
+    YARN-4496. Improve HA ResourceManager Failover detection on the client.
+    (Jian He via xgong)
+
   OPTIMIZATIONS
 
   BUG FIXES
